--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
 
   <ul class='navigation'>
 
-    <li><a href='/#/inventory' class='index'>All Links</a></li>
+    <li><a href='/#/inventory' class='index'>Inventory</a></li>
     <li><a href='/#/shorten' class='create'>Shorten</a></li>
     <li><a href='/#/signin' class='logout'>Logout</a></li>
 
