--- a/client/app/Inventory/InventoryView.html
+++ b/client/app/Inventory/InventoryView.html
@@ -1,7 +1,18 @@
 <div ng-app='inventory'>
+  <!-- Search Functionality -->
+  <input type="text" class='search' ng-model='search' placeholder="Search">
+  
+  <!-- Input Functionality --> 
+  <h3>Add to Inventory</h3>
+  <form name='inventoryInput' ng-submit='addLink()'>
+    <input type='text'ng-model='link.url' placeholder='Puh yer yu-ar-el ri hur!'>
+    <button>Shorten</button>
+  </form>
+  
+  <!-- Inventory Table -->
   <h2>Available Inventory:</h2>
   <table> 
-    <tr ng-repeat='x in data'>
+    <tr ng-repeat='x in data | filter:search'>
       <td>{{x.product}}</td>
       <td>{{x.count}}</td>
       <td>{{x.brand}}</td>
