--- a/client/app/Inventory/InventoryView.html
+++ b/client/app/Inventory/InventoryView.html
@@ -4,15 +4,17 @@
   
   <!-- Input Functionality --> 
   <h3>Add to Inventory</h3>
-  <form name='inventoryInput' ng-submit='addLink()'>
-    <input type='text'ng-model='link.url' placeholder='Puh yer yu-ar-el ri hur!'>
-    <button>Shorten</button>
+  <form name='inventoryInput' ng-submit='addData()'>
+    <input type='text'ng-model='productData.product' placeholder='Product Name'>
+    <input type='text'ng-model='productData.count' placeholder='Product Count'>
+    <input type='text'ng-model='productData.brand' placeholder='Product Brand'>
+    <button>Add to Table</button>
   </form>
   
   <!-- Inventory Table -->
   <h2>Available Inventory:</h2>
   <table> 
-    <tr ng-repeat='x in data | filter:search'>
+    <tr ng-repeat="x in data | filter:search | orderBy: 'product'">
       <td>{{x.product}}</td>
       <td>{{x.count}}</td>
       <td>{{x.brand}}</td>
