--- a/client/app/Inventory/InventoryView.html
+++ b/client/app/Inventory/InventoryView.html
@@ -1,18 +1,7 @@
 <div ng-app='inventory'>
-  <!-- Search Functionality -->
-  <input type="text" class='search' ng-model='search' placeholder="Search">
-  
-  <!-- Input Functionality --> 
-  <h3>Add to Inventory</h3>
-  <form name='inventoryInput' ng-submit='addData()'>
-    <input type='text'ng-model='productData.product' placeholder='Product Name'>
-    <input type='text'ng-model='productData.count' placeholder='Product Count'>
-    <input type='text'ng-model='productData.brand' placeholder='Product Brand'>
-    <button>Add to Table</button>
-  </form>
   
   <!-- Inventory Table -->
-  <h2>Available Inventory:</h2>
+  <h2>Available Inventory:  {{ $location }}</h2>
   <table> 
     <tr ng-repeat="x in data | filter:search | orderBy: 'product'">
       <td>{{x.product}}</td>
