--- a/client/app/Inventory/InventoryView.html
+++ b/client/app/Inventory/InventoryView.html
@@ -36,7 +36,7 @@
         <td ng-show='element.active'>{{element.count}}</td>
         <td ng-show='element.active'>{{element.units}}</td>
         <td ng-show='element.active'><input type='text' ng-model='element.amount' placeholder='Amount to Transfer'></td>
-        <td ng-show='element.active'>{{element.count - transfer[$index].amount}}</td>
+        <td ng-show='element.active'>{{element.count - element.amount}}</td>
         <td ng-show='element.active' ng-click="element.active = !element.active">Remove Item</td>
         </tr>
     </tr>
