--- a/client/app/Inventory/InventoryView.html
+++ b/client/app/Inventory/InventoryView.html
@@ -30,14 +30,14 @@
         <th>Amount to Transfer</th>
         <th>Remaining in Inventory</th>
       </tr>
-      <tr ng-repeat="element in transfer | filter:search | orderBy: 'product'">
+      <tr ng-repeat="(ind, element) in transfer | filter:search | orderBy: 'product'">
       <!-- There has to be a sleeker way to have elements show/hide -__- -->
         <td ng-show='element.active'>{{element.product}}</td>
         <td ng-show='element.active'>{{element.count}}</td>
         <td ng-show='element.active'>{{element.units}}</td>
         <td ng-show='element.active'><input type='text' ng-model='element.amount' placeholder='Amount to Transfer'></td>
         <td ng-show='element.active'>{{element.count - element.amount}}</td>
-        <td ng-show='element.active' ng-click="element.active = !element.active">Remove Item</td>
+        <td ng-show='element.active' ng-click="transferToggle(ind)">Remove Item</td>
         </tr>
     </tr>
     </table>
