Adds skeleton for admin functionality

--- a/client/index.html
+++ b/client/index.html
@@ -10,12 +10,14 @@
     <h1>Inventory Flow-Control</h1>
 
     <ul class='navigation' display='inline'>
-      <li><a href='/#/Purchasing' class='create'>Purchasing</a></li>
-      <li><a href='/#/Receiving' class='logout'>Receiving</a></li>
-      <li><a href='/#/ColdStorage' class='logout'>Cold Storage</a></li>
-      <li><a href='/#/DryStorage' class='logout'>Dry Storage</a></li>
-      <li><a href='/#/Kitchen' class='logout'>Kitchen</a></li>
-      <li><a href='/#/PackOut' class='logout'>Pack Out</a></li>
+      <li><a href='/#/Admin'>Admin</a></li>
+      <br>
+      <li><a href='/#/Purchasing'>Purchasing</a></li>
+      <li><a href='/#/Receiving'>Receiving</a></li>
+      <li><a href='/#/ColdStorage'>Cold Storage</a></li>
+      <li><a href='/#/DryStorage'>Dry Storage</a></li>
+      <li><a href='/#/Kitchen'>Kitchen</a></li>
+      <li><a href='/#/PackOut'>Pack Out</a></li>
     </ul>
 
     <!-- the ng-view directive is where our templates will be loaded into when naviagted to -->
@@ -28,5 +30,6 @@
     <script src='app/Services/Services.js'></script>
     <script src="app/app.js"></script>
     <script src="app/Inventory/InventoryFlow.js"></script>
+    <script src="app/Admin/admin.js"></script>
   </body>
 </html>
