(refactor) Work towards ui-router

--- a/client/app/Admin/admin.html
+++ b/client/app/Admin/admin.html
@@ -19,7 +19,7 @@
     <th>Runner</th>
     <th>Date</th>
   </tr>
-  <tr ng-repeat="(key, value) in missed | filter:search | orderBy: 'time'">
+  <tr ng-repeat="(key, value) in missed | filter:search | orderBy: 'time' : true">
     <td>{{value.product}}</td>
     <td>{{value.missed}}</td>
     <td>{{value.runner}}</td>
